--- a/eCommerceUI/src/app/app.component.html
+++ b/eCommerceUI/src/app/app.component.html
@@ -1,4 +1,15 @@
+
+<ngx-spinner 
+  bdColor = "rgba(0, 0, 0, 0.8)" 
+  size = "large" 
+  color = "#fff" 
+  type = "square-jelly-box" 
+  [fullScreen] = "true">
+   Loading ...
+  </ngx-spinner>
+
 <app-nav-bar></app-nav-bar>
+<app-section-header></app-section-header>
 <div class="container" style="margin-top: 140px;">
   <router-outlet></router-outlet>
 </div>
